k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-essentials
spec:
  selector:
    app: react-essentials
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
